log
Thu 05 Oct 2023 04:04:52 PM UTC: 
 tests:  0|5
total_score: 0/70
5155c4b
Thu 05 Oct 2023 04:10:37 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sido[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:55:7: error: unused variable ‘columnaVacia’ [-Werror=unused-variable]
   55 |   int columnaVacia = -1;
      |       ^~~~~~~~~~~~
sudoku.c:54:7: error: unused variable ‘filaVacia’ [-Werror=unused-variable]
   54 |   int filaVacia = -1;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3fc7c77
Thu 05 Oct 2023 04:10:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:55:7: error: unused variable ‘columnaVacia’ [-Werror=unused-variable]
   55 |   int columnaVacia = -1;
      |       ^~~~~~~~~~~~
sudoku.c:54:7: error: unused variable ‘filaVacia’ [-Werror=unused-variable]
   54 |   int filaVacia = -1;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e70c89
Thu 05 Oct 2023 04:14:02 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:67:45: error: expected ‘)’ before ‘{’ token
   67 |     if(filaVacia != -1 && columnaVacia != -1{
      |       ~                                     ^
      |                                             )
sudoku.c:74:3: error: expected expression before ‘}’ token
   74 |   }
      |   ^
Compilation failed
6cae9f2
Thu 05 Oct 2023 04:14:19 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:67:45: error: expected ‘)’ before ‘{’ token
   67 |     if(filaVacia != -1 && columnaVacia != -1{
      |       ~                                     ^
      |                                             )
sudoku.c:76:1: error: expected expression before ‘}’ token
   76 | }
      | ^
sudoku.c:53:9: error: unused variable ‘list’ [-Werror=unused-variable]
   53 |   List* list=createList();
      |         ^~~~
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60108af
Thu 05 Oct 2023 04:14:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
Compilation failed
2819d9c
